# pymind

./: .gitignore  README.md  makefile  pyproject.toml  setupenv
.github/workflows/: run_tests.yml
docs/: configuration.md  index.md  landing-page.md  plugins.md
docs/built-in-plugins/: footer.md  landing-page.md  navigation-bar.md  referenced-in.md  tags.md  title.md
html/: configuration.html  footer.html  index.html  landing-page.html  navigation-bar.html  plugins.html  referenced-in.html  style.css  tags.html  tags_page.html  title.html
pymind/: __init__.py  __main__.py  __meta__.py  cache.py  core.py
pymind/engine/: __init__.py  tags_page.py
pymind/engine/post/: __init__.py  footer.py  navigation_bar.py  tags_page.py  title.py
pymind/engine/pre/: __init__.py  create_home_page.py  create_landing_page.py  footer.py  landing.py  recurse.py  reference.py  referenced_in.py  tags.py  tags_page.py
pymind/utility/: __init__.py  cache.py  misc.py  modfile.py  search.py  tags.py
tests/: test_cache.py  test_footer.py  test_install.py  test_landing_page.py  test_nav_bar.py  test_pymind.py  test_recurse.py  test_referenced_in.py  test_tags_page.py  test_title.py
tests/config/pymind/: footer.md  pymind.toml  pymind.yml  style.css  template.html
tests/example/: file1.md  footer.md  index.md  style.css  tags.md  updates.md
tests/example/subwiki/: s1.md  s2.md  s3.md
