[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyMind"
dynamic = ["version"]
authors = [
  { name="Alexander Brown", email="alex.brown7711@gmail.com" },
]
description = "A Python implementation of a text-based second brain that just works."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]

dependencies = [
  "markdown == 3.7",
  "pytest == 8.3.3",
  "pyyaml == 6.0.1"
]


[project.optional-dependencies]
testing = ["pytest == 8.3.3"]

[project.urls]
Homepage = "https://github.com/alexb7711/pymind"
Issues = "https://github.com/alexb7711/pymind/issues"

[project.scripts]
pymind = 'pymind.__main__:run'

[tool.setuptools]
packages = ['pymind']

[tool.setuptools.dynamic]
version = {attr = 'pymind.__meta__.__version__'}
